static/scss/profile.scss
.profile-pagination {
  text-align: center;
}

.profile-form {
  min-height: 0 !important;
  font-weight: 400 !important;
  font-size: 16px !important;
  overflow: visible;

  .rounded-profile-image {
    margin-left: 15px;
  }

  .mdl-button i.material-icons {
    color: $mm-brand-bg;
  }

  .section-header {
    font-weight: 500;
    font-size: 16px;
    padding-top: 30px;
  }

  label {
    font-weight: 400;
  }

  .profile-radio-switch {
    display: flex;
    flex-direction: row;
    color: $lightgray !important;
    text-transform: uppercase;

    div:first-child {
      margin-right: 15px;
    }
  }

  .profile-radio-switch, .profile-radio-group {
    font-size: 14px;
    display: flex;

    div {
      display: block !important;
    }

    .profile-radio-button {
      margin-bottom: 8px;
    }

    svg:last-child {
      fill: $mm-brand-bg !important;
    }
  }

  .profile-radio-group-label {
    font-weight: 400;
    font-size: 12px;
    color: rgba(0, 0, 0, 0.498039);
    margin-bottom: 10px;
  }

  .profile-radio-switch > div {
    width: 0 !important;
  }

  .profile-form-grid {
    width: 100%;
    padding: 0;

    .title {
      font-weight: 500;
      margin-top: 0;
    }

    .profile-card-header {
      justify-content: space-between;

      .title, span {
        font-weight: 500;
        font-size: 18px;
      }

      span.question {
        font-weight: 400;
        font-size: 16px;
      }
    }
  }

  .profile-form-row {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;

    &.row-with-border {
      border-bottom: 1px #e2e2e2 solid;

      &:nth-last-child(2) {
        border-bottom: none;
      }
    }

    &.row-padding {
      padding: 13px 0 0;
      margin: 0;
    }

    &.add {
      margin-bottom: 17px;
    }

    .profile-row-icons {
      text-align: right;
      color: #898989;
      display: flex;
      flex-direction: row;
      justify-content: flex-end;

      &.row-width {
        width: 50%;
      }
    }

    .col {
      &.user-credentials {
        width: 50%;

        vertical-align: middle;
        padding-bottom: 13px;

        &.row-padding {
          padding-top: 30px;
        }
      }

      &.user-info {
        margin-left: 20px;
        word-wrap: break-word;
        flex-grow: 2;
      }

      .profile-row-name {
        font-size: 16px;
        color: $font-black;
        padding: 12px 9px;
      }

      .school-type {
        font-weight: 600;
        text-transform: capitalize;
      }

      .school-name {
        margin-top: 10px;
      }

      .profile-row-date-range {
        font-size: 16px;
        font-weight: 300;
        color: $font-gray;
        float: left;
        position: relative;
        margin-top: 7px;
      }

      .profile-row-new-line {
        display: block;
        width: 100%;
      }
    }
  }

  .bound-check-box {
    margin:  12px 0 20px;
  }
}

.privacy-form-heading {
  font-size: 20px;
  font-weight: 500;
  margin-top: 0;
}

.program-select {
  z-index: 2;
  overflow: visible;
  font-weight: 400;
  font-size: 15px;
  padding-top: 30px;
}

// CSS magic to make the radio buttons show up next to each other
.profile-gender-group {
  display: block !important;

  .profile-radio-button {
    width: unset !important;
    display: inline-block !important;
    margin-right: 8px;

    label {
      width: unset !important;
    }
  }
}

.radio-label {
  color: #2d2d2d;
  font-weight: 400;

  .radio-label-hint {
    font-size: small;
    color: #555555;
  }
}

.profile-tab-grid {
  max-width: 900px;

  .mdl-textfield {
    width: 100%;
  }

  .profile-form-title {
    font-size: 22px;
    font-weight: 600;
  }

  .end-date-hint {
    font-size: 12px;
  }

  .top-space {
    top: 10px;
    position: relative;
  }

  .profile-tab-card-grayed {
    min-height: 70px !important;
    padding-bottom: 0;
    margin-bottom: 15px;
    background-color: #f9f9f9 !important;
  }
}

.about-me {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-left: 15px;
  width: 93%;

  h3 {
    padding: 14px 0;
    width: 150px;
  }

  .bio {
    width: 100%;
    white-space: pre-wrap;
    font-weight: 400;
    color: rbga(0,0,0,.75);
    line-height: 1.4em;

    &.placeholder {
      color: #939393;
      font-style: italic;
    }
  }
}

.romanized-name {
  background-color: #f5f5f5;
  padding: 0 15px;
}

